--- a/assignment2style.css
+++ b/assignment2style.css
@@ -25,7 +25,7 @@
 }
 
 .boxcontent.testimonials{
-    table td {font-size:20px; color:#1F1F1E;}
+    table td {font-size:20px; color:#1F1F1E; font-family:sans-serif;}
 }
 
 .boxcontent{
