--- a/assignment2style.css
+++ b/assignment2style.css
@@ -17,11 +17,6 @@
     flex-flow: row wrap; justify-content: center;
 }
 
-.flexbox.test{
-    display:flex;
-    flex-direction: row; justify-content: center;
-}
-
 #box {
     background-color:#8E9389; color:#FFFCFF; width: 100%; display:flex;
     font-size: 20px; padding: 30px 20px 30px 20px; box-sizing: border-box;
@@ -64,7 +59,26 @@ input[type="text"] {padding:5px}
 }
 
 .container{
-    display: flex; 
+    display: flex;
     flex-flow: column wrap;
-    align-items: center; 
+    align-items: center;
+
 }
+
+.row{
+    display: flex;
+    justify-content: start;
+    max-width: 820px;
+    margin: 10px 0;
+    font-family: sans-serif;
+    color:#50514F;
+    font-weight: bold;
+}
+
+.cell { 
+    display:flex;
+    max-width: 520px;
+    padding: 25px;
+    border: 1px;
+    align-items: center;
+} 
