--- a/assignment2style.css
+++ b/assignment2style.css
@@ -17,6 +17,11 @@
     flex-flow: row wrap; justify-content: center;
 }
 
+.boxcontent{
+    table th {text-align: center; font-size:50px; font-family: sans-serif; color:#50514F}
+    table td {text-align: center; font-family: sans-serif; color:#8E9389; font-weight:bold;}
+}
+
 #box {
     background-color:#8E9389; color:#FFFCFF; width: 100%; display:flex;
     font-size: 20px; padding: 30px 20px 30px 20px; box-sizing: border-box;
